Import of STEVAN/CSV-Template-0.02 from CPAN.
gitpan-cpan-distribution: CSV-Template
gitpan-cpan-version:      0.02
gitpan-cpan-path:         STEVAN/CSV-Template-0.02.tar.gz
gitpan-cpan-author:       STEVAN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension CSV-Template.
 
+0.02 Mon, May 24, 2004
+    - quote_string method added
+        - documentation created for it
+        - tests created for it
+
 0.01 Sun May 23 22:33:47 2004
     - module created
 
